Updated pricing and logo

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Project Starter</title>
+  <title>Houser's Workshop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="description" content="TODO: A starter project for ...">
@@ -18,7 +18,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png" alt="logo image">
+        <!-- <img src="images/logo.png" alt="logo image"> -->
+         <h1>Houser's Workshop</h1>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -180,7 +181,7 @@
                 <li>Acessible to all</li>
                 <li>Email support</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+              <button type="button" class="w-100 btn btn-lg btn-primary">Sign up for free</button>
             </div>
           </div>
         </div>
@@ -413,7 +414,7 @@
               <div id="collapseOne" class="accordion-collapse collapse show " aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                 Acessibility is extreamly import to help users navigate through you page and find the information they are looking for. By making sure your website is acessible you are able to help more people learn about your company
+                  Acessibility is extreamly import to help users navigate through you page and find the information they are looking for. By making sure your website is acessible you are able to help more people learn about your company
                 </div>
               </div>
             </div>
